[gd_scene load_steps=16 format=2]

[ext_resource path="res://Zombie/zombie_default-1.png" type="Texture" id=1]
[ext_resource path="res://Zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Zombie/zombie_default-2.png" type="Texture" id=3]
[ext_resource path="res://Zombie/zombie_move-3.png" type="Texture" id=4]
[ext_resource path="res://Zombie/zombie_move-4.png" type="Texture" id=5]
[ext_resource path="res://Zombie/zombie_move-2.png" type="Texture" id=6]
[ext_resource path="res://Zombie/zombie_move-1.png" type="Texture" id=7]
[ext_resource path="res://Zombie/AnimatedSprite.gd" type="Script" id=8]
[ext_resource path="res://Zombie/zombie_attack-1.png" type="Texture" id=9]
[ext_resource path="res://Zombie/zombie_attack-2.png" type="Texture" id=10]
[ext_resource path="res://Zombie/zombie_attack-3.png" type="Texture" id=11]
[ext_resource path="res://Zombie/AttackTimer.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 61.6524

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MovementCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
modulate = Color( 0.458824, 0.403922, 0.780392, 1 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true
script = ExtResource( 8 )

[node name="AttackTimer" type="Timer" parent="."]
script = ExtResource( 12 )

[connection signal="zombie_attack" from="." to="AttackTimer" method="_on_Zombie_zombie_attack"]
[connection signal="zombie_attack" from="." to="AnimatedSprite" method="_on_Zombie_zombie_attack"]
[connection signal="zombie_idle" from="." to="AttackTimer" method="_on_Zombie_zombie_idle"]
[connection signal="zombie_idle" from="." to="AnimatedSprite" method="_on_Zombie_zombie_idle"]
[connection signal="zombie_motion" from="." to="AttackTimer" method="_on_Zombie_zombie_motion"]
[connection signal="zombie_motion" from="." to="AnimatedSprite" method="_on_Zombie_zombie_motion"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_AttackZone_body_exited"]
[connection signal="timeout" from="AttackTimer" to="AttackTimer" method="_on_AttackTimer_timeout"]
